syntax = "proto2";

package onoro.proto;

message GameState {
  message Pawn {
    // x-coordinate of the pawn.
    optional int32 x = 1;
    // y-coordinate of the pawn, where the y-axis is 120 degrees
    // counter-clockwise from the x-axis.
    optional int32 y = 2;
    // If true, this is a black pawn, otherwise it's a white pawn.
    optional bool black = 3;
  }

  // A list of all the pawns that have been played, along with the coordinates
  // of each pawn. The absolute position of the pawns does not matter, only the
  // distances between each pawn.
  repeated Pawn pawns = 4;

  // If true, it is the black player's turn, otherwise the white player's turn.
  optional bool black_turn = 1;
  // The current turn number, starting from 0.
  optional uint32 turn_num = 2;
  // True if the game is finished, meaning someone has won.
  optional bool finished = 3;
}

message GameStates {
  repeated GameState state = 1;
}
